# kalk

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Makefile  bla  kalk.sln  main.cpp
kalk/: ArithmeticExpressions.cs  BinaryExpressions.cs  ChemicalExpressions.cs  Commands.cs  Common.cs  DefaultExpressions.cs  FodyWeavers.xml  Program.cs  kalk.csproj  packages.config
kalk/Properties/: AssemblyInfo.cs
src/: CMakeLists.txt  CommandParserSetup.cpp  ExpressionParserChemicalSetup.cpp  ExpressionParserDefaultSetup.cpp  ExpressionParserSetup.hpp  KalkSetup.hpp  Setup.hpp
